--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -22,11 +22,11 @@
       </a>
 
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li><a th:href="@{/index.html}" class="linkheader nav-link px-2 text-white ">Pomodoro app</a></li>
+        <li><a th:href="@{/index}" class="linkheader nav-link px-2 text-white ">Pomodoro app</a></li>
       </ul>
 
       <div class="text-end">
-        <a th:href="@{/login.html}"><button type="button" class="but btn-success btn-toolbar rounded">Iniciar Sesión</button></a>
+        <a th:href="@{/login}"><button type="button" class="but btn-success btn-toolbar rounded">Iniciar Sesión</button></a>
       </div>
     </div>
   </div>
