--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -17,7 +17,7 @@
 <header class="headerRegistro p-2">
   <div class="container">
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-      <a th:href="@{/index.html}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+      <a th:href="@{/index}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
         <img th:src="@{/img/logo2.png}" class=" imgreg img-fluid" alt="Logo Pomodoro">
       </a>
 
