--- a/src/main/resources/templates/tareas.html
+++ b/src/main/resources/templates/tareas.html
@@ -24,60 +24,74 @@
         <head>
             <div class="container">
                 <div class="row">
-                    <div class="col text-start">
+                    <div class="col-9 text-start">
                         <p class="marca fs-1 text text-decoration-underline"> Tareas</p>
                     </div>
                     <div class="col-3 mt-3">
-                        <abbr title="Agregar tarea"><button type="button"
-                                class="btn but btn-success rounded-pill btn-lg" data-bs-toggle="modal"
-                                data-bs-target="#exampleModal"">
+                        <div class="row align-content-end">
+                            <abbr title="Agregar tarea"><button type="button"
+                                    class="btn but btn-success rounded-pill btn-lg" data-bs-toggle="modal"
+                                    data-bs-target="#exampleModal"">
                                 <span class=" material-icons md-48">
-                                add_task
-                                </span></button></abbr>
-                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                            aria-hidden="true">
-                            <div class="modal-dialog">
-                                <div class="modal-content borderedit">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title fs-2 text marca text-decoration-underline"
-                                            id="exampleModalLabel">Nueva Tarea</h5>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                            aria-label="Close"></button>
-                                    </div>
-                                    <div class="modal-body my-3">
-                                        <form th:action="@{/}" method="post">
-                                            <div>
-                                                <p th:if="${error!=null}" th:text="${error}"></p>
-                                            </div>
-                                            <div class="col mb-1">
-                                                <label for="inputname"
-                                                    class="col-sm-2 col-form-label pre-control">Nombre</label>
-                                                <div class="col-sm-12 borderbox">
-                                                    <input type="text" class="form-control" id="Nombre" name="nombre">
+                                    add_task
+                                    </span></button></abbr>
+                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                                aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content borderedit">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title fs-2 text marca text-decoration-underline"
+                                                id="exampleModalLabel">Nueva Tarea</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body my-3">
+                                            <form th:action="@{/}" method="post">
+                                                <div>
+                                                    <p th:if="${error!=null}" th:text="${error}"></p>
                                                 </div>
-                                            </div>
-                                            <div class="col mb-1">
-                                                <label for="inputdate"
-                                                    class="col-sm-2 col-form-label pre-control">Fecha</label>
-                                                <div class="col-sm-12 borderbox">
-                                                    <input type="date" class="form-control" id="Nombre" name="fecha">
+                                                <div class="col mb-1">
+                                                    <label for="inputname"
+                                                        class="col-sm-2 col-form-label pre-control">Nombre</label>
+                                                    <div class="col-sm-12 borderbox">
+                                                        <input type="text" class="form-control" id="Nombre"
+                                                            name="nombre">
+                                                    </div>
                                                 </div>
-                                            </div>
-                                            <div class="col mb-1">
-                                                <label for="inputtime"
-                                                    class="col-sm-6 col-form-label pre-control">Cantidad de pom</label>
-                                                <div class="col-sm-12 borderbox">
-                                                    <input type="number" class="form-control" id="cantidadPom"
-                                                        name="tiempoinv">
+                                                <div class="col mb-1">
+                                                    <label for="inputdate"
+                                                        class="col-sm-2 col-form-label pre-control">Fecha</label>
+                                                    <div class="col-sm-12 borderbox">
+                                                        <input type="date" class="form-control" id="Nombre"
+                                                            name="fecha">
+                                                    </div>
                                                 </div>
-                                            </div>
-                                            <div class="col mt-4">
-                                                <button type="button" class="btn but btn-success"
-                                                    data-bs-dismiss="modal">Cerrar</button>
-                                                <button type="submit" class="btn but btn-success">Guardar</button>
-                                            </div>
-                                        </form>
+                                                <div class="col mb-1">
+                                                    <label for="inputtime"
+                                                        class="col-sm-6 col-form-label pre-control">Cantidad de
+                                                        pom</label>
+                                                    <div class="col-sm-12 borderbox">
+                                                        <input type="number" class="form-control" id="cantidadPom"
+                                                            name="tiempoinv">
+                                                    </div>
+                                                </div>
+                                                <div class="input-group mb-3">
+                                                    <label class="input-group-text" for="inputGroupSelect01">Options</label>
+                                                    <select class="form-select" id="inputGroupSelect01">
+                                                      <option selected>Choose...</option>
+                                                      <option value="1">One</option>
+                                                      <option value="2">Two</option>
+                                                      <option value="3">Three</option>
+                                                    </select>
+                                                  </div>
+                                                <div class="col mt-4">
+                                                    <button type="button" class="btn but btn-success"
+                                                        data-bs-dismiss="modal">Cerrar</button>
+                                                    <button type="submit" class="btn but btn-success">Guardar</button>
+                                                </div>
+                                            </form>
 
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -95,19 +109,12 @@
                     <tr th:each="tarea : ${tareas}">
                         <div class="container borderbox my-2">
                             <div class="row">
-                                <div class="col-2 my-4 ps-4">
-                                    <div class="row mb-5">
+                                <div class="col-2 my-auto">
+                                    <div class="row ms-auto">
                                         <abbr title="Tarea Terminada"><button type="button"
-                                                class="btn but btn-success rounded-pill btn-lg" th:href="@{}"><span
+                                                class="btn but btn-success rounded-pill btn-lg check_btn" th:href="@{}"><span
                                                     class="material-icons md-48">
-                                                    done_all
-                                                </span></button></abbr>
-                                    </div>
-                                    <div class="row mt-5">
-                                        <abbr title="Eliminar Tarea"><button type="button"
-                                                class="btn but btn-success rounded-pill btn-lg" th:href="@{}"><span
-                                                    class="material-icons md-48">
-                                                    delete
+                                                    radio_button_unchecked
                                                 </span></button></abbr>
                                     </div>
                                 </div>
@@ -123,24 +130,23 @@
                                         <div class="col">
                                             <p th:text="${tarea.fecha}" class="boxtarea text-center">Fecha</p>
                                         </div>
+                                        <div class="row">
+                                            <div class="col text-start">
+                                                <a href="#" class="link-success text-decoration-none">Editar</a>
+                                            </div>
+                                            <div class="col text-end me-0">
+                                                <a href="#" class="link-success text-decoration-none">Eliminar</a>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
 
-                                <div class="col-2 my-4">
-                                    <div class="row mb-5">
+                                <div class="col-2 my-auto">
+                                    <div class="row mx-auto">
                                         <abbr title="Empezar ciclo"><button type="button"
                                                 class="btn but btn-success rounded-pill btn-lg" th:href="@{}"><span
                                                     class="material-icons md-48">
                                                     play_circle_filled
-                                                </span></button>
-                                        </abbr>
-                                    </div>
-                                    <div class="row
-                                    mt-5">
-                                        <abbr title="Editar Tarea"><button type="button"
-                                                class="btn but btn-success rounded-pill btn-lg" th:href="@{}"><span
-                                                    class="material-icons md-48">
-                                                    reorder
                                                 </span></button>
                                         </abbr>
                                     </div>
